--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "meetpoint-backend": "file:",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
