Oauth Login: added oauth verification to the login system

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "meetpoint-backend",
   "version": "1.0.0",
   "main": "src/server.js",
@@ -28,6 +29,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "meetpoint-backend": "file:",
     "mongoose": "^8.9.5",
