--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/cellapp/MeetPoint-Backend#readme",
   "description": "",
   "dependencies": {
+    "agora-token": "^2.0.3",
     "appointment-bookings": "file:",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -31,10 +32,12 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "firebase-admin": "^13.1.0",
     "jsonwebtoken": "^9.0.2",
     "meetpoint-backend": "file:",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
