--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.1.0",
+    "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "meetpoint-backend": "file:",
     "mongoose": "^8.9.5",
@@ -41,6 +42,7 @@
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
+    "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "stripe": "^17.6.0"
