--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "meetpoint-backend": "file:",
+    "moment-timezone": "^0.5.48",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
